demo-site-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-site-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-site-1
  template:
    metadata:
      labels:
        app: demo-site-1
    spec:
      containers:
      - name: demo-site-1
        image: neilpeterson/aks-helloworld:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: demo-site-1
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: demo-site-1
