demo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: demo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - demo1.azure.com
    secretName: aks-ingress-tls
  rules:
  - host: demo1.azure.com
    http:
      paths:
      - backend:
          serviceName: demo-site-1
          servicePort: 80
        path: /demo1(.*)
      - backend:
          serviceName: demo-site-2
          servicePort: 80
        path: /demo2(/|$)(.*)
